crates/squawk_lexer/src/snapshots/squawk_lexer__tests__bitstring.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\nB'1001'\nb'1001'\nX'1FF'\nx'1FF'\n\"#)"
---
[
    "\n" @ Whitespace,
    "B'1001'" @ Literal { kind: BitStr { terminated: true } },
    "\n" @ Whitespace,
    "b'1001'" @ Literal { kind: BitStr { terminated: true } },
    "\n" @ Whitespace,
    "X'1FF'" @ Literal { kind: ByteStr { terminated: true } },
    "\n" @ Whitespace,
    "x'1FF'" @ Literal { kind: ByteStr { terminated: true } },
    "\n" @ Whitespace,
]
