crates/squawk_lexer/src/snapshots/squawk_lexer__tests__dollar_quote_mismatch_tags_simple.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\n-- dollar quoting with mismatched tags\n$foo$hello world$bar$\n\"#)"
---
[
    "\n" @ Whitespace,
    "-- dollar quoting with mismatched tags" @ LineComment,
    "\n" @ Whitespace,
    "$foo$hello world$bar$\n" @ Literal { kind: DollarQuotedString { terminated: false } },
]
