crates/squawk_lexer/src/snapshots/squawk_lexer__tests__dollar_strings_part2.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\nDO $doblock$\nend\n$doblock$;\"#)"
---
[
    "\n" @ Whitespace,
    "DO" @ Ident,
    " " @ Whitespace,
    "$doblock$\nend\n$doblock$" @ Literal { kind: DollarQuotedString { terminated: true } },
    ";" @ Semi,
]
