crates/squawk_lexer/src/snapshots/squawk_lexer__tests__numeric.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\n42\n3.5\n4.\n.001\n.123e10\n5e2\n1.925e-3\n1e-10\n1e+10\n1e10\n4664.E+5\n\"#)"
---
[
    "\n" @ Whitespace,
    "42" @ Literal { kind: Int { base: Decimal, empty_int: false, trailing_junk_start: 2 } },
    "\n" @ Whitespace,
    "3.5" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 3 } },
    "\n" @ Whitespace,
    "4." @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 2 } },
    "\n" @ Whitespace,
    ".001" @ Literal { kind: Int { base: Decimal, empty_int: false, trailing_junk_start: 4 } },
    "\n" @ Whitespace,
    ".123e10" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 7 } },
    "\n" @ Whitespace,
    "5e2" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 3 } },
    "\n" @ Whitespace,
    "1.925e-3" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 8 } },
    "\n" @ Whitespace,
    "1e-10" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 5 } },
    "\n" @ Whitespace,
    "1e+10" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 5 } },
    "\n" @ Whitespace,
    "1e10" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 4 } },
    "\n" @ Whitespace,
    "4664.E+5" @ Literal { kind: Float { base: Decimal, empty_exponent: false, trailing_junk_start: 8 } },
    "\n" @ Whitespace,
]
