crates/squawk_lexer/src/snapshots/squawk_lexer__tests__params.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\nselect $1 + $2;\n\nselect $1123123123123;\n\nselect $;\n\"#)"
---
[
    "\n" @ Whitespace,
    "select" @ Ident,
    " " @ Whitespace,
    "$1" @ PositionalParam { trailing_junk_start: 2 },
    " " @ Whitespace,
    "+" @ Plus,
    " " @ Whitespace,
    "$2" @ PositionalParam { trailing_junk_start: 2 },
    ";" @ Semi,
    "\n\n" @ Whitespace,
    "select" @ Ident,
    " " @ Whitespace,
    "$1123123123123" @ PositionalParam { trailing_junk_start: 14 },
    ";" @ Semi,
    "\n\n" @ Whitespace,
    "select" @ Ident,
    " " @ Whitespace,
    "$" @ PositionalParam { trailing_junk_start: 1 },
    ";" @ Semi,
    "\n" @ Whitespace,
]
