crates/squawk_lexer/src/snapshots/squawk_lexer__tests__quoted_ident.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\n\"hello &1 -world\";\n\n\n\"hello-world\n\"#)"
---
[
    "\n" @ Whitespace,
    "\"hello &1 -world\"" @ QuotedIdent { terminated: true, uescape: false },
    ";" @ Semi,
    "\n\n\n" @ Whitespace,
    "\"hello-world\n" @ QuotedIdent { terminated: false, uescape: false },
]
