crates/squawk_lexer/src/snapshots/squawk_lexer__tests__quoted_ident_with_escape_quote.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\n\"foo \"\" bar\"\n\"#)"
---
[
    "\n" @ Whitespace,
    "\"foo \"\" bar\"" @ QuotedIdent { terminated: true, uescape: false },
    "\n" @ Whitespace,
]
